<resources>
    <string name="app_name" translatable="false">To-Do-Dip</string>

    <string name="title_home">Головна сторінка</string>
    <string name="title_dashboard">Панель завдань</string>
    <string name="title_notifications">Налаштування</string>

    <string name="title_activity_login">Вхід / Реєстрація</string>

    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="password_old">Введіть старий пароль</string>
    <string name="password_new">Введіть новий пароль</string>

    <string name="action_sign_in">Вхід</string>
    <string name="action_reg_in">Реєстрація</string>
    <string name="chenge_pass_butt">Змінити</string>

    <string name="todaytask">Завдання на сьогодні:</string>

    <string name="profile">Мій профіль</string>
    <string name="settings">Налаштування</string>
    <string name="about">О програмі</string>

    <string name="addtask">Додавання нового запису</string>

    <string name="add_task_batt">Додати новий запис</string>
    <string name="title_activity_add_task">Додавання нового запису</string>

    <string name="all_task">Усі завдання</string>
    <string name="tomorrow">Завтра</string>
    <string name="later">Не зроблені</string>

    <string name="error_email">Введіть ваш Email!</string>
    <string name="error_pass">Введіть ваш пароль!</string>
    <string name="error_pass_conf">Підтвердіть ваш пароль!</string>
    <string name="req_field">Обов`язкове поле!</string>

    <string name="exit">Вихід</string>

    <string name="homedone">Виконано:</string>
    <string name="homeall">Усього:</string>
    <string name="homeleft">Залишилось:</string>

    <string name="repeat">Повторити</string>
    <string name="noiter">Помилка!!! Перевірте ваше підключення до мережі!</string>

    <string name="addhead">Заголовок</string>
    <string name="adddisc">Опис</string>
    <string name="addwhom">Кому</string>
    <string name="adddateto">Дата здачі</string>

    <string name="chengepass">Змінити пароль</string>
    <string name="delltask">Видалити запис</string>
    <string name="delltaskinfo">Для того щоб видалити запис оберіть його зі списку та підтвердіть видалення</string>
    

    <string name="dia_dell_task">Ви впевнені що хочете видалити запис?</string>
    <string name="dia_exit">Ви впевнені що хочете вийти?</string>

    <string name="yes">Так</string>
    <string name="no">Ні</string>

    <string name="notif_chenge_pass">Пароль успішно змінено!</string>
    <string name="notif_auth_succ">Авторизація успішна!</string>
    <string name="notif_auth_fail">Авторизація провалена!</string>
    <string name="notif_reg_succ">Реєстрація успішна!</string>
    <string name="notif_reg_fail">Реєстрація провалена!</string>
    <string name="notif_add_succ">Дані успішно записані!</string>
    <string name="notif_add_fail">Помилка при запису даних!</string>
    <string name="notif_update_succ">Дані успішно оновлені!</string>
    <string name="notif_update_fail">Помилка при оновленні даних!</string>

    <string name="author">Автор: </string>
    <string name="datedo">Дата здачі: </string>
    <string name="dateot">Дата створення: </string>
    <string name="done">Успішно</string>
    <string name="notif">Повідомлення</string>

    <string name="about_text">Тема: Розробка клієнт-серверного комплексу формування, обробки та обміну електроних заяок на підприємстві. Розробник:Скірчак Владислав Миколайович</string>


</resources>