<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_blue_bg"
        android:layerType="none"
        android:rotation="180"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frame3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame2">

        <Button
            android:id="@+id/button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="18dp"
            android:background="@drawable/blue_border_rounded_color"
            android:onClick="onClick"
            android:text="@string/profile"
            android:textColor="@color/blue"
            app:backgroundTint="@color/white"
            app:backgroundTintMode="multiply"
            app:icon="@drawable/ic_baseline_person_24"
            app:iconGravity="textStart"
            app:iconTint="@color/blue" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/blue_border_rounded_color"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/about"
            android:textColor="@color/blue"
            app:backgroundTint="@color/white"
            app:backgroundTintMode="multiply"
            app:icon="@drawable/ic_baseline_question_answer_24"
            app:iconGravity="textStart"
            app:iconTint="@color/blue" />

        <Button
            android:id="@+id/butt_singOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/blue_border_rounded_color"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/exit"
            android:textColor="@color/blue"
            app:backgroundTint="@color/white"
            app:backgroundTintMode="multiply"
            app:icon="@drawable/ic_baseline_exit_to_app_24"
            app:iconGravity="textStart"
            app:iconTint="@color/blue" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_blue_bg"
        android:layerType="none"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>